--- a/pkg/admin/gui/front-end/html/sidebar.html
+++ b/pkg/admin/gui/front-end/html/sidebar.html
@@ -1,7 +1,7 @@
 {{ define "sidebar" }}
 <div id="appSidebar" class="collapse collapse-horizontal show" hidden>
   <nav class="sidebar d-flex flex-column flex-shrink-0 p-3 bg-white border-end h-100">
-    {{ if or (contains .myPermission.Servers "r") (contains .myPermission.Partners "r") (contains .myPermission.Administration "r") }}
+    {{ if or (contains .myPermission.Servers "r") (contains .myPermission.Partners "r") }}
         <div class="mb-1.5">
             <button class="btn btn-toggle align-items-center rounded w-100 text-start {{ if eq $.sidebarSection "connection" }}current{{ end }}" data-bs-toggle="collapse" data-bs-target="#sec-connection" aria-expanded="true">
                 {{ index .tab "connection_settings" }}
@@ -17,41 +17,35 @@
                 {{ if contains .myPermission.Partners "r" }}
                     <li><i class="bi bi-person-check-fill fs-8 ms-0 me-1"></i><a class="link-dark rounded ms-0 {{ if eq $.sidebarLink "partner_management" }}active{{ end }}" href="partner_management">{{ index .tab "remote_partner_management" }}</a></li>
                 {{ end }}
-                {{ if contains .myPermission.Administration "r" }}
-                    <li><i class="bi bi-cloud-fill fs-8 ms-0 me-1"></i><a class="link-dark rounded ms-0" href="cloud_instance_management">{{ index .tab "cloud_instance_management" }}</a></li>
-                {{ end }}
             </ul>
             </div>
         </div>
     {{ end }}
+    {{ if contains .myPermission.Rules "r" }}
     <div class="mb-1.5">
         <button class="btn btn-toggle align-items-center rounded w-100 text-start {{ if eq $.sidebarSection "treatment" }}current{{ end }}" data-bs-toggle="collapse" data-bs-target="#sec-treatment" aria-expanded="true">
             {{ index .tab "treatment_settings" }}
         </button>
         <div class="collapse show" id="sec-treatment" data-force-open="{{ if eq $.sidebarSection "treatment" }}true{{ else }}false{{ end }}">
         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-            {{ if contains .myPermission.Rules "r" }}
-                <li><i class="bi bi-shuffle fs-8 ms-0 me-1"></i><a class="link-dark rounded ms-0 {{ if eq $.sidebarLink "transfer_rules_management" }}active{{ end }}" href="transfer_rules_management">{{ index .tab "transfer_rules_management" }}</a></li>
-            {{ end }}
+            <li><i class="bi bi-shuffle fs-8 ms-0 me-1"></i><a class="link-dark rounded ms-0 {{ if eq $.sidebarLink "transfer_rules_management" }}active{{ end }}" href="transfer_rules_management">{{ index .tab "transfer_rules_management" }}</a></li>
             <li><i class="bi bi-key-fill fs-8 ms-0 me-1"></i><a class="link-dark rounded ms-0" href="cryptographic_key_management">{{ index .tab "cryptographic_key_management" }}</a></li>
             <li><i class="bi bi-envelope-at-fill fs-8 ms-0 me-1"></i><a class="link-dark rounded ms-0" href="smtp_credentials_management">{{ index .tab "smtp_credentials_management" }}</a></li>
             <li><i class="bi bi-file-earmark-text-fill fs-8 ms-0 me-1"></i><a class="link-dark rounded ms-0" href="email_templates_management">{{ index .tab "email_templates_management" }}</a></li>
         </ul>
         </div>
     </div>
+    {{ end }}
     <div class="mb-1.5">
         <button class="btn btn-toggle align-items-center rounded w-100 text-start" data-bs-toggle="collapse" data-bs-target="#sec-monitoring" aria-expanded="true">
             {{ index .tab "monitoring" }}
         </button>
         <div class="collapse show" id="sec-monitoring">
         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-            {{ if contains .myPermission.Administration "r" }}
-                <li><i class="bi bi-list-check fs-8 ms-0 me-1"></i><a class="link-dark rounded ms-0" href="status_services">{{ index .tab "status_of_services" }}</a></li>
-            {{ end }}
+            <li><i class="bi bi-list-check fs-8 ms-0 me-1"></i><a class="link-dark rounded ms-0" href="status_services">{{ index .tab "status_of_services" }}</a></li>
             {{ if contains .myPermission.Transfers "r" }}
                 <li><i class="bi bi-arrow-left-right fs-8 ms-0 me-1"></i><a class="link-dark rounded ms-0" href="transfer_monitoring">{{ index .tab "transfer_monitoring" }}</a></li>
             {{ end }}
-            <li><i class="bi bi-diagram-3-fill fs-8 ms-0 me-1"></i><a class="link-dark rounded ms-0" href="snmp_management">{{ index .tab "snmp_management" }}</a></li>
         </ul>
         </div>
     </div>
@@ -62,8 +56,12 @@
         <div class="collapse show" id="sec-admin">
         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
             <li><i class="bi bi-person-fill fs-8 ms-0 me-1"></i><a class="link-dark rounded ms-0" href="user_management">{{ index .tab "user_management" }}</a></li>
+            {{ if contains .myPermission.Administration "r" }}
             <li><i class="bi bi-shield-lock-fill fs-8 ms-0 me-1"></i><a class="link-dark rounded ms-0" href="managing_authentication_authorities">{{ index .tab "managing_authentication_authorities" }}</a></li>
+            <li><i class="bi bi-cloud-fill fs-8 ms-0 me-1"></i><a class="link-dark rounded ms-0" href="cloud_instance_management">{{ index .tab "cloud_instance_management" }}</a></li>
+            <li><i class="bi bi-diagram-3-fill fs-8 ms-0 me-1"></i><a class="link-dark rounded ms-0" href="snmp_management">{{ index .tab "snmp_management" }}</a></li>
             <li><i class="bi bi-sliders fs-8 ms-0 me-1"></i><a class="link-dark rounded ms-0" href="managing_configuration_overrides">{{ index .tab "managing_configuration_overrides" }}</a></li>
+            {{ end }}
         </ul>
         </div>
     </div>
