--- a/pkg/admin/gui/front-end/html/addProtoConfig.html
+++ b/pkg/admin/gui/front-end/html/addProtoConfig.html
@@ -809,3 +809,57 @@
     </div>
 </div>
 {{ end }}
+
+{{ define "addWebdavPartner" }}
+<div id="protoConfig_webdav" class="protoConfigBlock" style="display:none;">
+    <div id="webdavTLSForm">
+        <hr style="border-top: 1px solid #ababab;">
+        <div class="mt-4 mb-2"><strong>{{ index .tab "protocolConfiguration" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocolConfiguration" }}"></i> :</strong></div>
+        <div class="form-input">
+            <label class="col-form-label">{{ index .tab "minTLSVersion" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipMinFtpsTLSVersion" }}"></i> :</label>
+            <select name="protoConfigWebdavMinTLSVersion" id="protoConfigWebdavMinTLSVersion" class="form-select">
+                <option value="" disabled {{ if not (index .modalElement "protoConfigWebdavMinTLSVersion") }}selected{{ end }}>{{ index .tab "selectTLSVersion" }}</option>
+                {{ range .TLSVersions }}
+                <option value="{{ . }}" {{ if eq (index $.modalElement "protoConfigWebdavMinTLSVersion") . }}selected{{ end }}>{{ . }}</option>
+                {{ end }}
+            </select>
+        </div>
+    </div>
+</div>
+{{ end }}
+
+{{ define "addWebdavServer" }}
+<div id="protoConfig_webdav" class="protoConfigBlock" style="display:none;">
+    <div id="webdavTLSForm">
+        <hr style="border-top: 1px solid #ababab;">
+        <div class="mt-4 mb-2"><strong>{{ index .tab "protocolConfiguration" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocolConfiguration" }}"></i> :</strong></div>
+        <div class="form-input">
+            <label class="col-form-label">{{ index .tab "minTLSVersion" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipMinFtpsTLSVersion" }}"></i> :</label>
+            <select name="protoConfigWebdavMinTLSVersion" id="protoConfigWebdavMinTLSVersion" class="form-select">
+                <option value="" disabled {{ if not (index .modalElement "protoConfigWebdavMinTLSVersion") }}selected{{ end }}>{{ index .tab "selectTLSVersion" }}</option>
+                {{ range .TLSVersions }}
+                <option value="{{ . }}" {{ if eq (index $.modalElement "protoConfigWebdavMinTLSVersion") . }}selected{{ end }}>{{ . }}</option>
+                {{ end }}
+            </select>
+        </div>
+    </div>
+</div>
+{{ end }}
+
+{{ define "addWebdavClient" }}
+<div id="protoConfig_webdav" class="protoConfigBlock" style="display:none;">
+    <div id="webdavTLSForm">
+        <hr style="border-top: 1px solid #ababab;">
+        <div class="mt-4 mb-2"><strong>{{ index .tab "protocolConfiguration" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocolConfiguration" }}"></i> :</strong></div>
+        <div class="form-input">
+            <label class="col-form-label">{{ index .tab "minTLSVersion" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipMinFtpsTLSVersion" }}"></i> :</label>
+            <select name="protoConfigWebdavMinTLSVersion" id="protoConfigWebdavMinTLSVersion" class="form-select">
+                <option value="" disabled {{ if not (index .modalElement "protoConfigWebdavMinTLSVersion") }}selected{{ end }}>{{ index .tab "selectTLSVersion" }}</option>
+                {{ range .TLSVersions }}
+                <option value="{{ . }}" {{ if eq (index $.modalElement "protoConfigWebdavMinTLSVersion") . }}selected{{ end }}>{{ . }}</option>
+                {{ end }}
+            </select>
+        </div>
+    </div>
+</div>
+{{ end }}
