--- a/pkg/admin/gui/front-end/html/local_client_management_page.html
+++ b/pkg/admin/gui/front-end/html/local_client_management_page.html
@@ -85,6 +85,12 @@
                     {{ if in $.protocolsList "pesit-tls" }}
                         <option value="pesit-tls" {{ if $.modalElement }}{{ if eq (index $.modalElement "addLocalClientProtocol") "pesit-tls" }}selected{{ end }}{{ end }}>PeSIT-TLS</option>
                     {{ end }}
+                    {{ if in $.protocolsList "webdav" }}
+                        <option value="webdav" {{ if $.modalElement }}{{ if eq (index $.modalElement "addLocalClientProtocol") "webdav" }}selected{{ end }}{{ end }}>WebDAV</option>
+                    {{ end }}
+                    {{ if in $.protocolsList "webdav-tls" }}
+                        <option value="webdav-tls" {{ if $.modalElement }}{{ if eq (index $.modalElement "addLocalClientProtocol") "webdav-tls" }}selected{{ end }}{{ end }}>WebDAV over HTTPS</option>
+                    {{ end }}
                 </select>
                 </div>
                 <hr style="border-top: 1px solid #ababab;">
@@ -126,6 +132,7 @@
                 {{ template "addFtpClient" . }}
                 {{ template "addPesitClient" . }}
                 {{ template "addHttpClient" . }}
+                {{ template "addWebdavClient" . }}
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{ index .tab "close" }}</button>
@@ -202,6 +209,14 @@
               <input class="form-check-input" type="checkbox" name="filterProtocolPeSIT-TLS" id="filterProtocolPeSIT-TLS" value="true" {{ if .filter.Protocols.PeSITTLS }}checked{{ end }}>
               <label class="form-check-label" for="filterProtocolPeSIT-TLS">PeSIT-TLS</label>
             </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" name="filterProtocolWebdav" id="filterProtocolWebdav" value="true" {{ if .filter.Protocols.Webdav }}checked{{ end }}>
+              <label class="form-check-label" for="filterProtocolWebdav">WebDAV</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="checkbox" name="filterProtocolWebdavTLS" id="filterProtocolWebdavTLS" value="true" {{ if .filter.Protocols.WebdavTLS }}checked{{ end }}>
+              <label class="form-check-label" for="filterProtocolWebdavTLS">WebDAV over HTTPS</label>
+            </div>
         </div>
       </form>
     </div>
@@ -255,7 +270,7 @@
             <td>{{ .LocalAddress.Host }}</td>
             <td>{{ .LocalAddress.Port }}</td>
             <td>
-              {{ if ne .Protocol "http" }}
+              {{ if and (ne .Protocol "http") (ne .Protocol "webdav") }}
               <button class="btn btn-outline-primary modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#protoConfigModal_{{ .ID }}">
                     <i class="bi bi-gear-wide-connected"></i>
                 </button>
@@ -283,6 +298,9 @@
                         {{ end }}
                         {{ if eq .Protocol "https" }}
                           {{ template "displayHttpClient" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions "Protocol" .Protocol) }}
+                        {{ end }}
+                        {{ if eq .Protocol "webdav-tls" }}
+                          {{ template "displayWebdavClient" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions "Protocol" .Protocol) }}
                         {{ end }}
                         </div>
                         <div class="modal-footer">
@@ -406,6 +424,12 @@
                               {{ if in $.protocolsList "pesit-tls" }}
                                   <option value="pesit-tls" {{ if $me }}{{ if eq (index $me "editLocalClientProtocol") "pesit-tls" }}selected{{ end }}{{ else if eq .Protocol "pesit-tls" }}selected{{ end }}>PeSIT-TLS</option>
                               {{ end }}
+                              {{ if in $.protocolsList "webdav" }}
+                                  <option value="webdav" {{ if $me }}{{ if eq (index $me "editLocalClientProtocol") "webdav" }}selected{{ end }}{{ else if eq .Protocol "webdav" }}selected{{ end }}>WebDAV</option>
+                              {{ end }}
+                              {{ if in $.protocolsList "webdav-tls" }}
+                                  <option value="webdav-tls" {{ if $me }}{{ if eq (index $me "editLocalClientProtocol") "webdav-tls" }}selected{{ end }}{{ else if eq .Protocol "webdav-tls" }}selected{{ end }}>WebDAV over HTTPS</option>
+                              {{ end }}
                             </select>
                             </div>
                             <hr style="border-top: 1px solid #ababab;">
@@ -446,6 +470,7 @@
                             {{ template "editPesitClient" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions "CompatibilityModePeSIT" $.CompatibilityModePeSIT "modalElement" $me) }}
                             {{ template "editSftpClient" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "KeyExchanges" $.KeyExchanges "Ciphers" $.Ciphers "MACs" $.MACs "modalElement" $me) }}
                             {{ template "editHttpClient" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions "modalElement" $me) }}
+                            {{ template "editWebdavClient" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions "modalElement" $me) }}
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{ index $.tab "close" }}</button>
