--- a/pkg/admin/gui/front-end/html/partner_management_page.html
+++ b/pkg/admin/gui/front-end/html/partner_management_page.html
@@ -78,6 +78,12 @@
                   {{ if in $.protocolsList "pesit-tls" }}
                       <option value="pesit-tls" {{ if $.modalElement }}{{ if eq (index $.modalElement "addPartnerProtocol") "pesit-tls" }}selected{{ end }}{{ end }}>PeSIT-TLS</option>
                   {{ end }}
+                  {{ if in $.protocolsList "webdav" }}
+                      <option value="webdav" {{ if eq (index .modalElement "addPartnerProtocol") "webdav" }}selected{{ end }}>WebDAV</option>
+                  {{ end }}
+                  {{ if in $.protocolsList "webdav-tls" }}
+                      <option value="webdav-tls" {{ if eq (index .modalElement "addPartnerProtocol") "webdav-tls" }}selected{{ end }}>WebDAV over HTTPS</option>
+                  {{ end }}
                 </select>
               </div>
               <hr style="border-top: 1px solid #ababab;">
@@ -95,6 +101,7 @@
               {{ template "addFtpPartner" . }}
               {{ template "addPesitPartner" . }}
               {{ template "addHttpPartner" . }}
+              {{ template "addWebdavPartner" . }}
             </div>
               <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{ index .tab "close" }}</button>
@@ -170,7 +177,15 @@
               <input class="form-check-input" type="checkbox" name="filterProtocolPeSIT-TLS" id="filterProtocolPeSIT-TLS" value="true" {{ if .filter.Protocols.PeSITTLS }}checked{{ end }}>
               <label class="form-check-label" for="filterProtocolPeSIT-TLS">PeSIT-TLS</label>
             </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" name="filterProtocolWebdav" id="filterProtocolWebdav" value="true" {{ if .filter.Protocols.Webdav }}checked{{ end }}>
+                <label class="form-check-label" for="filterProtocolWebdav">Webdav</label>
             </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" name="filterProtocolWebdavTLS" id="filterProtocolWebdavTLS" value="true" {{ if .filter.Protocols.WebdavTLS }}checked{{ end }}>
+                <label class="form-check-label" for="filterProtocolWebdavTLS">WebDAV over HTTPS</label>
+            </div>
+          </div>
         </form>
         </div>
         <nav class="navbar navbar-light bg-light">
@@ -208,7 +223,7 @@
               <td>{{ .Address.Host }}</td>
               <td>{{ .Address.Port }}</td>
               <td>
-              {{ if ne .Protocol "http" }}
+              {{ if and (ne .Protocol "http") (ne .Protocol "webdav") }}
               <button class="btn btn-outline-primary modal-btn" type="button" data-bs-toggle="modal" data-bs-target="#protoConfigModal_{{ .ID }}">
                 <i class="bi bi-gear-wide-connected"></i>
               </button>
@@ -236,6 +251,9 @@
                       {{ end }}
                       {{ if eq .Protocol "https" }}
                         {{ template "displayHttpPartner" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions "Protocol" .Protocol) }}
+                      {{ end }}
+                      {{ if eq .Protocol "webdav-tls" }}
+                        {{ template "displayWebdavPartner" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions "Protocol" .Protocol) }}
                       {{ end }}
                     </div>
                     <div class="modal-footer">
@@ -303,6 +321,12 @@
                           {{ if in $.protocolsList "pesit-tls" }}
                               <option value="pesit-tls" {{ if $me }}{{ if eq (index $me "editPartnerProtocol") "pesit-tls" }}selected{{ end }}{{ else if eq .Protocol "pesit-tls" }}selected{{ end }}>PeSIT-TLS</option>
                           {{ end }}
+                          {{ if in $.protocolsList "webdav" }}
+                            <option value="webdav" {{ if $me }}{{ if eq (index $me "editPartnerProtocol") "webdav" }}selected{{ end }}{{ else if eq .Protocol "webdav" }}selected{{ end }}>WebDAV</option>
+                          {{ end }}
+                          {{ if in $.protocolsList "webdav-tls" }}
+                            <option value="webdav-tls" {{ if $me }}{{ if eq (index $me "editPartnerProtocol") "webdav-tls" }}selected{{ end }}{{ else if eq .Protocol "webdav-tls" }}selected{{ end }}>WebDAV over HTTPS</option>
+                          {{ end }}
                         </select>
                       </div>
                       <hr style="border-top: 1px solid #ababab;">
@@ -320,6 +344,7 @@
                       {{ template "editPesitPartner" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions "CompatibilityModePeSIT" $.CompatibilityModePeSIT "modalElement" $me) }}
                       {{ template "editSftpPartner" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "KeyExchanges" $.KeyExchanges "Ciphers" $.Ciphers "MACs" $.MACs "modalElement" $me) }}
                       {{ template "editHttpPartner" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions "modalElement" $me) }}
+                      {{ template "editWebdavPartner" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions "modalElement" $me) }}
                     </div>
                       <div class="modal-footer">
                           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{ index $.tab "close" }}</button>
